# tp-manager

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml
agent/: README.md  pyproject.toml
agent/packaging/: install.sh  tpagent.service
agent/packaging/sshd_config.d/: tpagent-sftp.conf
agent/packaging/sudoers.d/: tpagent
agent/scripts/: tpagent-create-linux-user.sh  tpagent-create-webroot.sh  tpagent-delete-linux-user.sh  tpagent-delete-webroot.sh  tpagent-mysql-provision.sh  tpagent-postgres-provision.sh
agent/scripts/lib/: common.sh
agent/src/tpagent/: auth.py  config.py  main.py
agent/src/tpagent/api/: databases.py  health.py  linux_accounts.py  webroots.py
agent/src/tpagent/domain/: errors.py  models.py
agent/src/tpagent/services/: job_ledger.py  linux_account_service.py  webroot_service.py
agent/src/tpagent/services/db_provisioning/: base.py  factory.py  mysql_provisioner.py  postgres_provisioner.py
agent/src/tpagent/util/: sanitize.py  shell.py
agent/tests/: conftest.py
agent/tests/contract/: test_contract.py
agent/tests/unit/: test_db_provisioning_factory.py  test_sanitize.py
contracts/: CHANGELOG.md  openapi.yaml
contracts/examples/: db-provision-mysql.json  db-provision-postgres.json  linux-user-create.json  webroot-create.json
dashboard/: .env  .env.test  composer.json
dashboard/config/: services.yaml
dashboard/migrations/: Version20260701114730.php  Version20260701142855.php
docs/: architecture.md  guide-utilisateur.md  naming-patterns.md  security.md
tools/: sftp-jail-check.sh
(+121 files in other folders)
